--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3190,6 +3190,8 @@ dictionary AudioBufferSourceOptions {
         <br>
         <p>반복되는 부분은 loopStart까지로부터의 영역을 차지하는 것으로 생각되나, loopEnd는 포함하지 않습니다. 반복 영역의 재생의 방향은 노드의 playback rate의 부호를 따릅니다. 양수 playback rate에 대해서, 반복은 loopStart에서 loopEnd까지 발생합니다. 음수 rate에 대해서, 반복은 loopEnd에서 loopStart까지 발생합니다.</p>
         <br>
+        <p>반복은 start()의 offset 인자의 구현에 영향을 주지 않습니다. 재생은 언제나 요청된 offset에서 시작하고, 반복은 오직 한 번 반복의 부분이 재생 중에 조우되면 시작합니다.</p>
+        <br>
         <h3>1.9.6. AudioBuffer 내용의 재생</h3>
         <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
