--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3196,6 +3196,8 @@ dictionary AudioBufferSourceOptions {
         <br>
         <p>반복의 끝점은 subsample accuracy를 가집니다. 끝점이 정확한 sample frame offset에 떨어지지 않을 때, 또는 playback rate가 1과 같지 않을 때, 반복의 재생은 보간되어 반복의 시작과 끝을 함께 splice해 마치 딱 반복된 오디오가 버퍼의 순차적이고, 비반복된 영역에서 발생한 것처럼 합니다.</p>
         <br>
+        <p>반복에 관련된 속성들은 버퍼의 재생 중에 변할 수도 있고, 일반적으로 다음 rendering quantum에 영향을 미칩니다. 실제 결과는 다음의 규범적인 재생 알고리즘에 의해 정의됩니다.</p>
+        <br>
         <h3>1.9.6. AudioBuffer 내용의 재생</h3>
         <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
