--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3200,6 +3200,8 @@ dictionary AudioBufferSourceOptions {
         <br>
         <p>loopStart와 loopEnd 어트리뷰트의 기본값은 0입니다. 0의 loopEnd 값은 버퍼의 길이와 같기 때문에, 기본 끝점은 전체 버퍼가 반복에 포함되는 것을 유발합니다.</p>
         <br>
+        <p>반복 끝점의 값은 버퍼의 샘플 레이트의 측면에서 time offset으로서 표현되며, 이는 이 값은 재생의 과정 중에 동적으로 변화할 수 있는 노드의 playbackRate 파라미터에 독립적임을 의미한다는 것에 주의하십시오.</p>
+        <br>
         <h3>1.9.6. AudioBuffer 내용의 재생</h3>
         <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
