--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3204,6 +3204,14 @@ dictionary AudioBufferSourceOptions {
         <br>
         <h3>1.9.6. AudioBuffer 내용의 재생</h3>
         <br>
+        <p>이 규범적인 섹션은 버퍼의 내용의 재생을 명시하는데, 재생이 합동하여 작동하는 다음의 요소들에 의해 영향받는다는 사실을 설명합니다.</p>
+        <br>
+        <ul>
+          <li>sub-sample 정밀도로 표현될 수 있는, 시작하는 offset.</li>
+          <li>sub-sample 정밀도로 표현될 수 있고 재생 도중에 동적으로 변화할 수 있는, 반복 포인트.</li>
+          <li>양수일 수도 있고 음수일 수도 있는 유한한 값을 취할 수 있는 하나의 computedPlaybackRate를 산출하기 위해 결합하는, playback rate와 detuning 파라미터.</li>
+        </ul>
+        <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
         <p>이것은 최종 오디오 목적지를 나타내는 AudioNode이며 유저가 최종적으로 듣게 될 것입니다. 이것은 종종 스피커에 연결되는 오디오 출력 장치로써 여겨집니다. 들릴 모든 렌더링된 오디오는 이 노드로 라우팅될 것입니다. 즉, AudioContext의 라우팅 그래프의 "최종" 노드입니다. AudioContext당 오직 하나의 AudioDestinationNode가 있는데, 이는 AudioContext의 destination 어트리뷰트를 통해 제공됩니다.</p>
         <br>
