--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3212,6 +3212,14 @@ dictionary AudioBufferSourceOptions {
           <li>양수일 수도 있고 음수일 수도 있는 유한한 값을 취할 수 있는 하나의 computedPlaybackRate를 산출하기 위해 결합하는, playback rate와 detuning 파라미터.</li>
         </ul>
         <br>
+        <p>AudioBufferSourceNode로부터 내부적으로 출력을 생성하는 다음의 알고리즘은 다음의 원칙들을 따릅니다.</p>
+        <br>
+        <ul>
+          <li>버퍼의 리샘플링은 UA에 의해 원해지는 지점 어디서든 임의적으로 수행되어 출력의 품질 또는 효율성을 증가시킬 수 있습니다.</li>
+          <li>sub-sample start offset 또는 반복 포인트는 샘플 프레임간의 추가적인 보간을 요구할 수도 있습니다.</li>
+          <li>반복된 버퍼의 재생은 반복된 오디오 컨텐츠의 연이은 발생을 포함하고 있는 반복되지 않은 버퍼와 동일하게 동작해야 하며, 보간에 의한 효과를 제외합니다.</li>
+        </ul>
+        <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
         <p>이것은 최종 오디오 목적지를 나타내는 AudioNode이며 유저가 최종적으로 듣게 될 것입니다. 이것은 종종 스피커에 연결되는 오디오 출력 장치로써 여겨집니다. 들릴 모든 렌더링된 오디오는 이 노드로 라우팅될 것입니다. 즉, AudioContext의 라우팅 그래프의 "최종" 노드입니다. AudioContext당 오직 하나의 AudioDestinationNode가 있는데, 이는 AudioContext의 destination 어트리뷰트를 통해 제공됩니다.</p>
         <br>
