--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3364,6 +3364,14 @@ function process(numberOfFrames) {
         <br>
         <p>다음의 비규범적인 그림들은 여러 가지 중요한 시나리오들에서의 알고리즘의 동작을 보여줍니다. 버퍼의 동적 리샘플링은 고려되지 않았지만, 반복 위치의 횟수가 변경되지 않는 한 이것은 물질적으로 결과 재생에 영향을 주지 않을 것입니다. 모든 그림에서, 다음의 약속이 적용됩니다.</p>
         <br>
+        <ul>
+          <li>컨텍스트 샘플 레이트는 1000Hz입니다</li>
+          <li>AudioBuffer 컨텐츠는 x origin에 있는 첫번째 샘플 프레임과 함께 보여집니다.</li>
+          <li>출력 신호는 x origin에 있는 start 시간에 위치한 샘플 프레임과 함께 보여집니다.</li>
+          <li>UA가 다른 보간법을 사용할 수도 있긴 하지만, 선형 보간은 계속 묘사됩니다.</li>
+          <li>그림에 나타난 duration 값들은 buffer를 나타내는 것이지, start()의 인자가 아닙니다</li>
+        </ul>
+        <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
         <p>이것은 최종 오디오 목적지를 나타내는 AudioNode이며 유저가 최종적으로 듣게 될 것입니다. 이것은 종종 스피커에 연결되는 오디오 출력 장치로써 여겨집니다. 들릴 모든 렌더링된 오디오는 이 노드로 라우팅될 것입니다. 즉, AudioContext의 라우팅 그래프의 "최종" 노드입니다. AudioContext당 오직 하나의 AudioDestinationNode가 있는데, 이는 AudioContext의 destination 어트리뷰트를 통해 제공됩니다.</p>
         <br>
