--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3379,6 +3379,15 @@ function process(numberOfFrames) {
           <figcaption><strong>도식 6</strong> AudioBufferSourceNode 기본 재생</figcaption>
         </figure>
         <br>
+        <p>이 그림은 playbackRate 보간을 나타내는데, 모든 다른 출력 샘플 프레임이 보간된 버퍼 컨텐츠의 절반 속도 재생을 보여주고 있습니다. 특정한 노트로는 반복된 출력의 마지막 샘플 프레임이 있는데 이는 반복 시작점을 사용해 보간된 것입니다.</p>
+        <br>
+        <figure>
+          <img src="img/absn-slow-loop.png" width="543" height="472">
+          <figcaption><strong>도식 7</strong> AudioBufferSourceNode playbackRate 보간</figcaption>
+        </figure>
+        <br>
+        <p>※ 보간은 다음 데이터 포인트로 loopStart에 있는 샘플을 사용하는데, 왜냐하면 버퍼 내에 더 이상의 샘플들이 없기 때문입니다.</p>
+        <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
         <p>이것은 최종 오디오 목적지를 나타내는 AudioNode이며 유저가 최종적으로 듣게 될 것입니다. 이것은 종종 스피커에 연결되는 오디오 출력 장치로써 여겨집니다. 들릴 모든 렌더링된 오디오는 이 노드로 라우팅될 것입니다. 즉, AudioContext의 라우팅 그래프의 "최종" 노드입니다. AudioContext당 오직 하나의 AudioDestinationNode가 있는데, 이는 AudioContext의 destination 어트리뷰트를 통해 제공됩니다.</p>
         <br>
