--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3395,6 +3395,13 @@ function process(numberOfFrames) {
           <figcaption><strong>도식 8</strong> AudioBufferSourceNode 샘플 레이트 보간</figcaption>
         </figure>
         <br>
+        <p>이 그림은 subsample offset 재생을 나타내는데, 버퍼 내의 offset이 정확히 sample frame의 절반에서 시작합니다. 그 결과로, 모든 출력 프레임이 보간됩니다.</p>
+        <br>
+        <figure>
+          <img src="img/absn-offset.png" width="543" height="448">
+          <figcaption><strong>도식 9</strong> subsample offset 재생</figcaption>
+        </figure>
+        <br>
         <h2>1.10. AudioDestinationNode 인터페이스</h2>
         <p>이것은 최종 오디오 목적지를 나타내는 AudioNode이며 유저가 최종적으로 듣게 될 것입니다. 이것은 종종 스피커에 연결되는 오디오 출력 장치로써 여겨집니다. 들릴 모든 렌더링된 오디오는 이 노드로 라우팅될 것입니다. 즉, AudioContext의 라우팅 그래프의 "최종" 노드입니다. AudioContext당 오직 하나의 AudioDestinationNode가 있는데, 이는 AudioContext의 destination 어트리뷰트를 통해 제공됩니다.</p>
         <br>
