--- a/WebAudioAPISpecTranslation/index.html
+++ b/WebAudioAPISpecTranslation/index.html
@@ -3538,6 +3538,43 @@ interface AudioListener {
         </pre>
         <br>
         <h3>1.11.1. 어트리뷰트</h3>
+        <br>
+        <dl>
+          <dt><i>forwardX</i> / 자료형: AudioParam / 읽기 전용</dt>
+          <dd>3D 카르테시안 좌표공간에서 리스너가 가리키고 있는 앞 방향의 x 좌표 요소를 설정합니다.</dd>
+          <br>
+          <dd>
+            <table>
+              <tr>
+                <td>파라미터</td>
+                <td>값</td>
+                <td>참고사항</td>
+              </tr>
+              <tr>
+                <td>defaultValue</td>
+                <td>0</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>minValue</td>
+                <td>most-negative-single-float</td>
+                <td>약 -3.4028235e38</td>
+              </tr>
+              <tr>
+                <td>maxValue</td>
+                <td>most-positive-single-float</td>
+                <td>약 3.4028235e38</td>
+              </tr>
+              <tr>
+                <td>automationRate</td>
+                <td>"a-rate"</td>
+                <td></td>
+              </tr>
+            </table>
+          </dd>
+          <br>
+        </dl>
+        <br>
         <h3>1.11.2. 메서드</h3>
         <h3>1.11.3. 프로세싱</h3>
         <br>
